--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,5 +12,10 @@
  *
  */
 
- @import "bootstrap-sprockets";
- @import "bootstrap";
+ // @import "bootstrap-sprockets";
+ // @import "bootstrap";
+@import "materialize/components/color";
+ $primary-color: color("blue", "darken-2") !default;
+ $secondary-color: color("blue-grey", "lighten-2") !default;
+@import 'materialize';
+@import "materialize";
