--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,7 +30,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.submit "Update", class: 'btn btn-lg btn-block btn-primary' %>
+        <%= f.submit "Update", class: 'btn' %>
       </div>
     <% end %>
     <hr>
