--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.submit "Sign up", class: "btn btn-primary btn-block btn-lg" %>
+        <%= f.submit "Sign up", class: "btn" %>
       </div>
     <% end %>
     <div class="text-center">
